fixed critical bug on bands table when viewing on mobile

--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -261,3 +261,31 @@ html.theme-light {
     background: #3273dc;
   }
 }
+
+/* Change checkbox checked color to this: #3273dc */
+/* Hide the default checkbox */
+/* input[type="checkbox"] {
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: white;
+  cursor: pointer;
+} */
+
+/* Style when checkbox is checked */
+/* input[type="checkbox"]:checked {
+  background-color: blue;
+  border-color: blue;
+} */
+
+/* Style the checkmark */
+/* input[type="checkbox"]:checked::before {
+  content: "✔";
+  display: block;
+  color: white;
+  font-size: 12px;
+  text-align: center;
+  line-height: 14px;
+} */
